--- a/client/static/css/layer2.css
+++ b/client/static/css/layer2.css
@@ -52,6 +52,15 @@ main>section:nth-child(1)>*:nth-child(1){
   margin-left: 1rem;
 }
 
+main>section:nth-child(3)>a{
+  z-index: -1000;
+}
+
+/* images */
+main>section:nth-child(3)>a>img:not(:first-child){
+  display: none;
+}
+
 /* Image description container */
 main>section:nth-child(4){
 
